--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <meta name="description" content="Interactive 3D math learning experience designed to make mathematics fun through games">
     <meta name="theme-color" content="#4361ee">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="MathOrGame">
     
     <!-- PWA Icons -->
-    <link rel="apple-touch-icon" href="./icons/icon-152x152.png">
+    <link rel="apple-touch-icon" href="./icons/icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="./icons/icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./icons/icon-192x192.png">
     <link rel="apple-touch-icon" sizes="167x167" href="./icons/icon-152x152.png">
